tests/type_errors/calling_non_function.sy
mod A

def main
: Int
: a = f ' 1

def f
: Int
: = 1

--+ expected exit status: 1
--+ expected stderr:
--+ > Failed to merge types.
--+ 
--+ t39 -> t38
--+ ----
--+ Int
--+ 
--+ tests/type_errors/calling_non_function.sy
--+   5| : a = f ' 1
--+              ^
--+ > Failed to merge types.
--+ 
--+ t39
--+ ----
--+ _ -> t38
--+ 
--+ tests/type_errors/calling_non_function.sy
--+   3| def main
--+   4| : Int
--+   5| : a = f ' 1
--+   6| 
--+   7| def f

